[package]
name = "teepee"
version = "0.0.0"
authors = ["Chris Morgan <me@chrismorgan.info>"]
description = "HTTP library"
#documentation = 
#homepage = 
repository = "https://github.com/teepee/teepee"
readme = "README.md"
keywords = ["web", "http", "library"]
license = "MIT/Apache-2.0"

[lib]
name = "httpcommon"
path = "src/httpcommon/lib.rs"

#[[lib]]
#name = "httpc"
#path = "src/httpc/lib.rs"
#
#[[lib]]
#name = "httpd"
#path = "src/httpd/lib.rs"

[dependencies]
mucell = "*"
phf = "*"
phf_mac = "*"
mopa = "*"
