[package]
name = "teepee"
version = "0.0.0"
authors = ["Chris Morgan <me@chrismorgan.info>"]
description = "HTTP library"
#documentation = 
#homepage = 
repository = "https://github.com/teepee/teepee"
readme = "README.md"
keywords = ["web", "http", "library"]
license = "MIT/Apache-2.0"

[dependencies]
mucell = "*"
phf = "*"
phf_macros = "*"
mopa = "*"
